[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/Sprites/PlayerV2/Body/player_animation_body.png" type="Texture" id=1]
[ext_resource path="res://Player/Scripts/Jugador.gd" type="Script" id=2]
[ext_resource path="res://Player/Scenes/player_dano.gd" type="Script" id=3]
[ext_resource path="res://Player/Sprites/PlayerV2/Heads/player_animation_head1.png" type="Texture" id=4]
[ext_resource path="res://Images/luz.png" type="Texture" id=5]
[ext_resource path="res://Player/Scripts/Camera.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 10 )

[sub_resource type="Animation" id=3]
resource_name = "die"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 47, 41, 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=4]
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24 ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.35, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.35, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=7]
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Head:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1.55989, 0.552896 )

[node name="Jugador" type="KinematicBody2D" groups=[
"Jugador",
"persistent",
]]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
hframes = 25
frame = 13

[node name="Head" type="Sprite" parent="Sprite"]
texture = ExtResource( 4 )
hframes = 25
frame = 13

[node name="Area2D" type="Area2D" parent="Sprite" groups=[
"attack",
]]
position = Vector2( 10, 13 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D" groups=[
"attack",
]]
position = Vector2( 8, -13 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )
anims/sword_attack_1 = SubResource( 7 )
anims/take_damage = SubResource( 8 )

[node name="Detector_colision" type="Area2D" parent="." groups=[
"Jugador",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_colision"]
position = Vector2( 0, -2 )
shape = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 6.0
script = ExtResource( 6 )

[node name="CanvasModulate" type="CanvasModulate" parent="Camera2D"]
z_index = 3
color = Color( 0, 0, 0, 1 )

[node name="Tiempo_Inmunidad" type="Timer" parent="."]

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 2.4, 2.4 )
texture = ExtResource( 5 )
range_layer_min = -1
shadow_enabled = true
shadow_filter = 3
shadow_filter_smooth = 20.0

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 1.69407e-21, 1.69407e-21 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 5 )
range_layer_min = -1
shadow_enabled = true
shadow_filter = 3
shadow_filter_smooth = 20.0
shadow_item_cull_mask = 2

[node name="FeetArea" type="Area2D" parent="."]
position = Vector2( 20, 24.5107 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetArea"]
position = Vector2( -20.107, -17.1335 )
shape = SubResource( 10 )
[connection signal="health_changed" from="." to="." method="_on_Jugador_health_changed"]
[connection signal="area_entered" from="Detector_colision" to="." method="_on_Detector_colision_area_entered"]
[connection signal="timeout" from="Tiempo_Inmunidad" to="." method="_on_Tiempo_Inmunidad_timeout"]
[connection signal="body_exited" from="FeetArea" to="." method="_on_FeetArea_body_exited"]
